@startuml

    !include lexakai.theme
    
    title "com.telenav.lexakai.members"
    
    interface Comparable
    
    Comparable <|-- UmlConstructor
    class UmlConstructor
    {
        --(constructors)--
        +UmlConstructor(ConstructorDeclaration)
        --
        +String uml()
        --(checks)--
        +boolean isExcluded()
        +boolean isProtected()
        +boolean isPublic()
        --(naming)--
        +String name()
    }
    
    Comparable <|-- UmlMethod
    class UmlMethod
    {
        --(constructors)--
        +UmlMethod(ClassOrInterfaceDeclaration, MethodDeclaration)
        --
        +Set<String> explicitGroupNames()
        +MethodDeclaration method()
        +ClassOrInterfaceDeclaration parent()
        +String returnType()
        +String uml()
        --(checks)--
        +boolean isExcluded()
        +boolean isOverride()
        +boolean isProtected()
        +boolean isPublic()
        --(naming)--
        +String name()
        +String simpleName()
    }
    
@enduml

